--- a/Navigator/src/index.html
+++ b/Navigator/src/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv='cache-control' content='no-cache'>
   <meta http-equiv='expires' content='0'>
   <meta http-equiv='pragma' content='no-cache'>
-  <title>Finders of Gelephu</title>
+  <title>  Navigator | Addressing Guidelines</title>
 
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Open+Sans+Condensed:300,700|Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
